# flad-tauri-sqlite

./: .gitignore  FIX_RECEPCION.md  fix-camelcase-complete.sh  package-lock.json  package.json  svelte.config.js  test_schema.sh  vite.config.js
.github/workflows/: build.yml
docs/: CAMELCASE-SNAKECASE-DEBUG.md  CHANGELOG-OPTIMIZACION-2025-10.md  DATABASE-SCHEMA.md  DEBUG-GUIDE-DB-IMPORTS.md  DEBUG-GUIDE-DB-MIGRATION.md  FIX-GUIDE-CAMELCASE-MIGRATION.md  FIX-TAURI-SNAKE-CASE-2025-10-28.md  MIGRATION_ERRORS_ANALYSIS.md  OPTIMIZACION-CADENA-DATOS.md  OPTIMIZACION-DB-2025-01.md  OPTIMIZACION-EJECUTADA.md  PROMPT-OPTIMIZACION-CADENA.md  PROMPT-TESTING-MANUAL.md  README.md
migrations/: 003_indices_performance.sql
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/sql/: schema.sql
src-tauri/src/: commands.rs  commands_firma.rs  db.rs  lib.rs  main.rs
src/lib/api/: tauri.js
src/lib/components/: Bienvenida.svelte  CrearOrdenTrabajo.svelte  FormularioIngreso.svelte  IngresarPago.svelte  ListaPago.svelte  ListaRecepcion.svelte  ModalEdicionRecepcion.svelte  ModalEditarInforme.svelte  ModalEditarOT.svelte  ModalEditarRequerimiento.svelte  ModalITO.svelte  ModalVistaImpresion.svelte  ModalVistaImpresionInforme.svelte  RecepcionIngreso.svelte  SelectPartida.svelte  SelectRecinto.svelte  SelectorFecha.svelte  SelectorFechaRecepcion.svelte  SelectorJardinModerno.svelte  SelectorPlazo.svelte  TablaOrdenTrabajo.svelte  (+2 more)
src/routes/: +layout.svelte  +page.svelte
static/: sw.js
(+10 files in other folders)
