[package]
name = "sistema-piloto-cont-mant"
version = "1.0.0"
description = "Sistema Piloto CONT MANT 2026"
authors = ["JUNJI"]
edition = "2021"

[lib]
name = "sistema_piloto_cont_mant_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "macros"] }
tokio = { version = "1.48.0", features = ["full"] }
chrono = { version = "0.4.42", features = ["serde"] }
dirs = "6.0.0"
calamine = "0.26"
csv = "1.3"
rust_xlsxwriter = "0.79"
base64 = "0.22"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-fs = "2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
